--- a/index.css
+++ b/index.css
@@ -1,12 +1,15 @@
-.item {
+.items{
     display: flex;
-    justify-content: center;
-    border-radius: 20px;
+    justify-content: center;   
+    border-radius: 100px 100px 100px;
+    background-color: blueviolet;
+    margin: 100px;
+    padding: 100px;
 }
-.btn-hola {
-    display: flexbox;
-    justify-items: center;
-    
-    
+
+.item{
+    display: flex;
+    justify-content: space-between;
+       
    
 }
